  [bug introduced in coreutils-8.0]

  stat -f recognizes more file system types: k-afs, fuseblk, gfs/gfs2, ocfs2,
  and rpc_pipefs. Also Minix V3 is displayed correctly as minix3, not minux3.
  [bug introduced in coreutils-8.1]

  touch -a once again guarantees that a file's change time is
  adjusted, working around a bug in current Linux kernels.
  [bug introduced in coreutils-8.1]


* Noteworthy changes in release 8.2 (2009-12-11) [stable]

** Bug fixes

  id's use of mgetgroups no longer writes beyond the end of a malloc'd buffer
  [bug introduced in coreutils-8.1]

  id no longer crashes on systems without supplementary group support.
  [bug introduced in coreutils-8.1]

  rm once again handles zero-length arguments properly.
  The rewrite to make rm use fts introduced a regression whereby
  a command like "rm a '' b" would fail to remove "a" and "b", due to
  the presence of the empty string argument.
  [bug introduced in coreutils-8.0]

  sort is now immune to the signal handling of its parent.
  Specifically sort now doesn't exit with an error message
  if it uses helper processes for compression and its parent
  ignores CHLD signals. [bug introduced in coreutils-6.9]

  tail without -f no longer access uninitialized memory
  [bug introduced in coreutils-7.6]

  timeout is now immune to the signal handling of its parent.
  Specifically timeout now doesn't exit with an error message
  if its parent ignores CHLD signals. [bug introduced in coreutils-7.6]

  a user running "make distcheck" in the coreutils source directory,
  with TMPDIR unset or set to the name of a world-writable directory,
  and with a malicious user on the same system
  was vulnerable to arbitrary code execution
  [bug introduced in coreutils-5.0]


* Noteworthy changes in release 8.1 (2009-11-18) [stable]

** Bug fixes

  chcon no longer exits immediately just because SELinux is disabled.
  Even then, chcon may still be useful.
  [bug introduced in coreutils-8.0]
